# lead-nurture-rag-bot

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
campaigns/: coldwater-harvest.json  example.json  supernews.json
docs/: README.md  api.md  architecture.md  campaign-ingestion.md  data-flow-details.md  data-flow.md  development.md  email-integration-roadmap.md  getting-started.md  lead-scoring-and-observations.md  teammate-repo-comparison-rag-b2b-crm.md
research/: README.md  benchmark-fixtures.md  competitive-landscape.md  email-outreach-compliance-human-review.md  evaluation-methodology.md  open-questions.md  program.md  research-log.md  sources.md
research/fixtures/: kb_documents.jsonl  lead_nurture_eval_cases.jsonl  provider_events.jsonl
scripts/: ingest_campaign.py  research_smoke_eval.py
src/lead_nurture_rag/: __init__.py  agent.py  app.py  categorizer.py  compliance_gate.py  crawler.py  models.py  observation.py  provider_events.py  retriever.py  store.py  web.py  web_helpers.py
tests/: test_agent.py  test_agent_llm_mode.py  test_agent_observation.py  test_agent_scheduling.py  test_campaign_ingestion.py  test_categorizer.py  test_compliance_gate.py  test_crawler.py  test_observation_analysis.py  test_provider_events.py  test_retriever.py  test_store.py  test_store_observations.py  test_web_ui_helpers.py
